--- a/todo/src/App.css
+++ b/todo/src/App.css
@@ -1,52 +1,67 @@
+body {
+  font-size: 2rem;
+}
+
 .App {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+h1.main-header {
   color: white;
+  padding: 2rem;
+  
+  text-decoration: red underline;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-.item {
-  display: inline;
-  background-color: aqua;
-}
-
-.completed {
-  text-decoration: line-through;
-}
-
 .todo-container {
   display:flex;
-  justify-content: space-between;
+  flex-wrap: wrap;
+
+  max-width: 80%;
+  margin: 0 auto;
+}
+.todo {
+  background-image: linear-gradient(to bottom, rgb(182, 197, 182), white);
+  padding: 5px;
+  border-radius: 100px;
+  margin: 5px;
+  margin: 20px;
+  width: 26%;
+  cursor: pointer;
+}
+.completed {
+  background-image: linear-gradient(to bottom, rgb(54, 145, 54), white);
+}
+.done-off {
+  display: none;
+}
+
+form {
+  margin-bottom: 20px;
+  background-color: yellow;
+  display: flex;
+  justify-content: center;
+  align-items: bottom;
+  height: 4rem;
+}
+
+.form__inputLabel{
+  background-color: pink;
+  position: relative;
+}
+
+form input{
+  position: absolute;
+  right: 0rem;
+  top: 15%;
+  background-color: white;
+  height: 60%;
+  padding-top: .2rem;
+}
+
+form button{
+  cursor: pointer;
+  background: yellow;
+  border: none;
+  border-right: 1px black;
+  font-size: 2rem;
+  padding-top: 1rem;
 }
