--- a/todo/src/index.css
+++ b/todo/src/index.css
@@ -1,3 +1,8 @@
+html {
+  background-color: white;
+  font-size: 62.5%;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,6 +10,11 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  background-color: rgb(56, 51, 51);
+
+  height: 92vh;
+  margin: 2%;
 }
 
 code {
